--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "airbnb-clone",
+  "homepage": "https://ajaysngh040.github.io/Airbnb-Clone/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages --d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
