--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "airbnb-clone",
   "homepage": "https://ajaysngh040.github.io/Airbnb-Clone/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
