--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airbnb-Clone",
+  "name": "Airbnb-Clone",
   "homepage": "https://ajaysngh040.github.io/Airbnb-Clone/",
   "private": false,
   "version": "0.0.0",
