package.json modified 5th time

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Airbnb-Clone",
-  "homepage": "https://ajaysngh040.github.io/Airbnb-Clone/",
+  "homepage": "https://ajaysngh040.github.io/Airbnb-Clone",
   "private": false,
   "version": "0.0.0",
   "type": "module",
